# cellDancer

./: .gitignore  CellDancer key applications.fileloc  LICENSE  MANIFEST.in  README.md  VeloVAE_DentateGyrus.ipynb  analysis_GAS_cell_level_para_plot.ipynb  analysis_GAS_cell_velocity_tune_cleanV2_smooth_bin_detail.ipynb  analysis_GAS_cell_velocity_tune_clean_MUSK.ipynb  analysis_GAS_jmlab_get_early_endoderm.ipynb  analysis_cell_velocity.py  conda_requirements.txt  config_record.md  name_changes.txt  readme.md  readme.rst  readme_pypi.rst  requirements.txt  setup.cfg  setup.py
Notebook/: celldancer_prototype_model.ipynb
analysis/: Case_study_GAS.ipynb  DeepVelo_DentateGyrus.ipynb  DeepVelo_Gastrulation.ipynb  DeepVelo_Pancreas_Reproduce.ipynb  Gastrulation_main_function-Copy1.ipynb  Gastrulation_main_function-Copy2.ipynb  Gastrulation_main_function-graphplot-Copy1.ipynb  Gastrulation_main_function-graphplot.ipynb  Gastrulation_main_function.ipynb  Pancreas_main_function_pre_sl.ipynb  Test.ipynb  Tunning_GAS.ipynb  Untitled.ipynb  VeloVAE_DentateGyrus.ipynb  VeloVAE_Gastrulation.ipynb  VeloVAE_Pancreas.ipynb  VeloVAE_Pancreas_Reproduce.ipynb  VeloVAE_Pancreas_ReproduceVeloVAEPaper.ipynb  __init__.py  analysis_GAS_embedding_pca_debug.ipynb  analysis_GASdep_pseudotime_subjob_cluster_by_s0.ipynb  analysis_GASraw_cell_velocity_tune_cleanV2_smooth_bin_detail.ipynb  analysis_NEU_smooth_bin_pseudotime.ipynb  analysis_PAN_alpha_beta_gamma_umap.ipynb  analysis_PAN_alpha_marker_gene_own.ipynb  analysis_PAN_alpha_marker_gene_scanpy.ipynb  analysis_SIM_compare_backpath.py  (+33 more)
(+302 files in other folders)
