[metadata]
name = celldancer
description = Study RNA velocity through neural network.
long_description_content_type = text/markdown
url = https://github.com/GuangyuWangLab2021/cellDancer
project_urls =
    Bug Tracker = https://github.com/GuangyuWangLab2021/cellDancer/issues
    Changelog = https://github.com/GuangyuWangLab2021/cellDancer/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7.6
include_package_data = True
install_requires =
    pytorch-lightning>=1.5.2
    pandas>=1.3.4
    numpy>=1.20.3
    anndata>=0.8.0
    tqdm>=4.62.3
    scikit-learn>=1.0.1
    scipy>=1.7.2
    joblib>=1.1.0
    scikit-image>=0.19.2
    statsmodels>=0.13.1
    matplotlib>=3.5.3
    seaborn>=0.11.2
    datashader>=0.14.0
    bezier>=2021.2.12
    umap-learn>=0.5.2
    jupyterlab>=3.3.4



[options.package_data]
src = model/*.pt

[options.packages.find]
where = src
